--- a/templates/vorlage/main.html
+++ b/templates/vorlage/main.html
@@ -5,6 +5,9 @@
     <title>Main</title>
 </head>
 <body>
-
+bums
+    <div class="content">
+            {% block content %}{% endblock %}
+        </div>
 </body>
 </html>
