--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>index</title>
-</head>
-<body>
+{% extends "vorlagen/main.html" %}
 
-</body>
-</html>
+{% block content %}
+<div>
+<h1>Bagga!</h1>
+<p>
+    {% if customer_name != "" %}
+    Auf Wiedersehen {{ customer_name }}!
+
+    {% elif session['customer'] %}
+
+    {% else %}
+    Guten Tag, bitte loggen Sie sich ein, oder erstellen ein neues Konto.
+
+    {% endif %}
+</p>
+</div>
+
+{% endblock %}
