--- a/templates/success.html
+++ b/templates/success.html
@@ -1,1 +1,5 @@
-hallo
+{% extends "vorlagen/main.html"  %}
+
+{% block content %}
+<H1> Herzlich Willkommen {{ session['customer'][0] }} {{ session['customer'][1] }}!</H1>
+{% endblock %}
