--- a/templates/register.html
+++ b/templates/register.html
@@ -28,11 +28,11 @@
             <input type="password" class="form-control" id="passwordRepeat" name="passwordRepeat" required>
         </div>
         <div class="column">
-            <label for="age" class="form-label">Alter</label>
+            <label for="age" class="form-label">Alter (optional)</label>
             <input type="number" class="form-control" id="age" size="3" name="age">
         </div>
         <div class="column">
-            <label for="bankinginstitution" class="form-label">Bankinstitution</label>
+            <label for="bankinginstitution" class="form-label">Bankinstitution (optional)</label>
             <input type="text" class="form-control" id="bankinginstitution" name="bankinginstitution" >
         </div>
 
