--- a/templates/vorlagen/main.html
+++ b/templates/vorlagen/main.html
@@ -13,13 +13,14 @@
         <p>Firma Bagga</p>
         <a href="./"> Startseite </a>
     <!-- if statement removes login and register hyperlink if a user is logged in -->
-    {% if session['customer'] == None %}
+    {% if session == {} %}
         <a href="./login"> Login </a>
         <a href="./register"> Registrieren </a>
     {% endif %}
     <!-- if statement enables logout page in navbar if user is logged in -->
-    {% if session['customer'] != None %}
-        <a href="./transaction"> Transaktionen </a>
+    {% if session != {} %}
+        <a href="./accounts"> Kontoübersicht </a>
+        <a href="./transaction"> Neue Transaktionen </a>
         <a href="./create_account"> Konto anlegen </a>
         <a href="./logout"> Logout </a>
     {% endif %}
