--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -12,17 +12,18 @@
     </select><br>
 
     <label for="amount">Betrag:</label>
-    <input type="text" id="amount" name="amount" required><br>
+    <input type="number" id="amount" name="amount" required
+           step="0.01" min="0.01" max="999999.99" title="Bitte geben Sie eine Zahl zwischen 0,01 und 999999,99 ein"><br>
 
     <label for="recipient">Empfänger:</label>
     <input type="text" id="recipient" name="recipient" required><br>
 
     <label for="description">Beschreibung:</label>
-    <textarea id="description" name="description" required></textarea><br>
+    <textarea id="description" name="description" ></textarea><br>
 
     <input type="submit" value="Transaktion hinzufügen">
 </form>
-
-<a href="/accounts">Zurück zu den Konten</a>
-
+{% if error %}
+        <H2 class="error"> {{ error }}</H2>
+{% endif %}
 {% endblock %}
