--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -13,12 +13,12 @@
 
     <label for="amount">Betrag:</label>
     <input type="number" id="amount" name="amount" required
-           step="0.01" min="0.01" max="999999.99" title="Bitte geben Sie eine Zahl zwischen 0,01 und 999999,99 ein"><br>
+           step="0.01" min="0.01" max="9999999.99" title="Bitte geben Sie eine Zahl zwischen 0,01 und 9999999,99 ein"><br>
 
     <label for="recipient">Empfänger:</label>
     <input type="text" id="recipient" name="recipient" required><br>
 
-    <label for="description">Beschreibung:</label>
+    <label for="description">Verwendungszweck:</label>
     <textarea id="description" name="description" ></textarea><br>
 
     <input type="submit" value="Transaktion hinzufügen">
