--- a/templates/vorlagen/main.html
+++ b/templates/vorlagen/main.html
@@ -10,7 +10,6 @@
 <body>
 <div class="navigation">
     <nav>
-        <p>Firma Bagga</p>
         <a href="./"> Startseite </a>
     <!-- if statement removes login and register hyperlink if a user is logged in -->
     {% if session == {} %}
@@ -19,7 +18,7 @@
     {% endif %}
     <!-- if statement enables logout page in navbar if user is logged in -->
     {% if session != {} %}
-        <a href="./accounts"> Kontoübersicht </a>
+        <a id="accountClick" href="./accounts"> Kontoübersicht </a>
         <a href="./transaction"> Neue Transaktionen </a>
         <a href="./create_account"> Konto anlegen </a>
         <a href="./logout"> Logout </a>
