--- a/templates/vorlagen/main.html
+++ b/templates/vorlagen/main.html
@@ -22,6 +22,7 @@
         <a href="./transaction"> Neue Transaktionen </a>
         <a href="./create_account"> Konto anlegen </a>
         <a href="./logout"> Logout </a>
+        <a href="./categories"> Kategorien</a>
     {% endif %}
     </nav>
 
