--- a/templates/accounts.html
+++ b/templates/accounts.html
@@ -21,6 +21,27 @@
     </select>
 </form>
 
+<form id="searchForm" method="POST" action="/update_table/search">
+    <label for="start_date">Startdatum:</label>
+    <input type="date" id="start_date" name="start_date">
+
+    <label for="end_date">Enddatum:</label>
+    <input type="date" id="end_date" name="end_date">
+
+    <label for="recipient">Name des Empfängers:</label>
+    <input type="text" id="recipient" name="recipient">
+
+
+    <label for="keyword">Stichwort im Verwendungszweck:</label>
+    <input type="text" id="keyword" name="keyword">
+
+    <label for="amount">Höhe des überwiesenen Betrags:</label>
+    <input type="text" id="amount" name="amount">
+
+    <input type="submit" id="search" value="Suchen">
+</form>
+
+
     <br>
 
     <style>
@@ -67,6 +88,28 @@
                 });
             }
         });
+
+document.addEventListener('DOMContentLoaded', function () {
+    document.getElementById('searchForm').addEventListener('submit', function (event) {
+        event.preventDefault(); // Verhindert das Standardverhalten des Formulars (Seitenneuladung)
+
+        // Sammelt Formulardaten
+        let formData = new FormData(this);
+
+        // Führt einen Fetch durch, um die Serverdaten zu aktualisieren
+        fetch('/update_table/search', {
+            method: 'POST',
+            body: formData
+        })
+        .then(response => response.text())
+        .then(data => {
+            // Aktualisiert die Tabelle mit den neuen Daten
+            document.getElementById('transactionTable').innerHTML = data.replace(/\\n/g, '');
+        })
+        .catch(error => console.error('Error:', error));
+    });
+});
+
 
     </script>
 {%if limit is not defined %}
