--- a/templates/table_fragment.html
+++ b/templates/table_fragment.html
@@ -18,4 +18,11 @@
             <td>{{ row[5] if row[5] is not none else '' }}</td>
         </tr>
     {% endfor %}
+    {% if total_amount is defined %}
+        <tr>
+            <td colspan="4"><strong>Gesamt:</strong></td>
+            <td><strong>{{ total_amount }}</strong></td>
+            <td></td>
+        </tr>
+    {% endif %}
 </table>
