--- a/templates/vorlagen/main.html
+++ b/templates/vorlagen/main.html
@@ -6,29 +6,31 @@
     <meta name="author" content="Robin Theissen, 386279">
     <meta name="author" content="Kirill Baskal, 375173">
     <title>Banking-Manager</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/global.css">
 </head>
 <body>
 <div class="navigation">
     <nav>
-        <a href="./"> Startseite </a>
-    <!-- if statement removes login and register hyperlink if a user is logged in -->
-    {% if session == {} %}
-        <a href="./login"> Login </a>
-        <a href="./register"> Registrieren </a>
-    {% endif %}
-    <!-- if statement enables logout page in navbar if user is logged in -->
-    {% if session != {} %}
-        <a id="accountClick" href="./accounts"> Kontoübersicht </a>
-        <a href="./transaction"> Neue Transaktionen </a>
-        <a href="./create_account"> Konto anlegen </a>
-        <a href="./logout"> Logout </a>
-        <a href="./categories"> Kategorien</a>
-    {% endif %}
+        <a href="./" {% if request.path == '/' %}class="active"{% endif %}> Startseite </a>
+        <!-- if statement removes login and register hyperlink if a user is logged in -->
+        {% if session == {} %}
+            <a href="./login" {% if request.path == '/login' %}class="active"{% endif %}> Login </a>
+            <a href="./register" {% if request.path == '/register' %}class="active"{% endif %}> Registrieren </a>
+        {% endif %}
+        <!-- if statement enables logout page in navbar if user is logged in -->
+        {% if session != {} %}
+            <a id="accountClick" href="./accounts" {% if request.path == '/accounts' %}class="active"{% endif %}> Kontoübersicht </a>
+            <a href="./transaction" {% if request.path == '/transaction' %}class="active"{% endif %}> Neue Transaktionen </a>
+            <a href="./create_account" {% if request.path == '/create_account' %}class="active"{% endif %}> Konto anlegen </a>
+            <a href="./categories" {% if request.path == '/categories' %}class="active"{% endif %}> Kategorien</a>
+            <a href="./logout" {% if request.path == '/logout' %}class="active"{% endif %}> Logout </a>
+        {% endif %}
     </nav>
-
-    <div class="content">
-        {% block content %}{% endblock %}
-    </div>
 </div>
+
+<div class="content">
+    {% block content %}{% endblock %}
+</div>
+
 </body>
 </html>
