--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,8 +1,9 @@
 {% extends "vorlagen/main.html" %}
 
 {% block content %}
-    <h2>Neue Kategorie erstellen</h2>
+<div id="categoryForm">
     <form action="/categories" method="POST">
+        <h2>Neue Kategorie erstellen</h2>
         <br>
         <label for="category"></label>
         <input type="text" id="category" name="category" required>
@@ -13,8 +14,9 @@
         <p class="error"> {{ errorCategory }}
     {% endif %}
 
-    <h2>Neues Schlagwort hinzufügen</h2>
+
     <form action="/categories" method="POST">
+        <h2>Neues Schlagwort hinzufügen</h2>
         <label for="categorySelect">Kategorie:</label>
         <select id="categorySelect" name="categorySelect" required style="display: inline-block;">
             <option value="" disabled selected>Kategorie auswählen</option>
@@ -22,10 +24,14 @@
                 <option value="{{ category[0] }}">{{ category[1] }}</option>
             {% endfor %}
         </select>
+    <br>
+    <br>
+    <br>
         <label for="keyword">Schlagwort:</label>
         <input type="text" id="keyword" name="keyword" required>
         <button type="submit">Schlagwort hinzufügen</button>
     </form>
+</div>
 
     {% if errorKeyword %}
         <p class="error"> {{ errorKeyword }}
