--- a/templates/vorlagen/main.html
+++ b/templates/vorlagen/main.html
@@ -7,11 +7,12 @@
     <meta name="author" content="Kirill Baskal, 375173">
     <title>Banking-Manager</title>
     <link rel="stylesheet" type="text/css" href="/static/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/table.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/forms_and_input.css">
 </head>
 <body>
 <div class="navigation">
     <nav>
-        <a href="./" {% if request.path == '/' %}class="active"{% endif %}> Startseite </a>
         <!-- if statement removes login and register hyperlink if a user is logged in -->
         {% if session == {} %}
             <a href="./login" {% if request.path == '/login' %}class="active"{% endif %}> Login </a>
