--- a/templates/vorlagen/main.html
+++ b/templates/vorlagen/main.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <meta name="author" content="Marc Kluge, 386440">
     <meta name="author" content="Robin Theissen, 386279">
-    <meta name="author" content="Kirill Baskal, 375173">
     <title>Banking-Manager</title>
     <link rel="stylesheet" type="text/css" href="/static/css/global.css">
     <link rel="stylesheet" type="text/css" href="/static/css/table.css">
     <link rel="stylesheet" type="text/css" href="/static/css/forms_and_input.css">
 </head>
+<!--Marc Kluge-->
 <body>
 <div class="navigation">
     <nav>
-        <!-- if statement removes login and register hyperlink if a user is logged in -->
         {% if session == {} %}
             <a href="./login" {% if request.path == '/login' %}class="active"{% endif %}> Login </a>
             <a href="./register" {% if request.path == '/register' %}class="active"{% endif %}> Registrieren </a>
         {% endif %}
-        <!-- if statement enables logout page in navbar if user is logged in -->
         {% if session != {} %}
             <a id="accountClick" href="./accounts" {% if request.path == '/accounts' %}class="active"{% endif %}> Kontoübersicht </a>
             <a href="./transaction" {% if request.path == '/transaction' %}class="active"{% endif %}> Neue Transaktionen </a>
